tools/nwtool/nwtool-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nwtool
  name: nw-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nwtool
  sessionAffinity: None
  type: ClusterIP
